# Data_Cleaner_Python_App

./: README.md
.devcontainer/: devcontainer.json
data_sweeper/: pyproject.toml
data_sweeper/src/data_sweeper/: app.py
src/data_sweeper/: app.py
